# RA6M5_code

./: .gitignore  .secure_azone  .secure_xml  BTL_LTHTN.docx  CMakeLists.txt  README.md  build_and_flash.bat  buildinfo.json  configuration.xml  fsp_gen.ld  hal_entry.c  ra_cfg.txt
cmake/: Config.cmake  GeneratedCfg.cmake  GeneratedSrc.cmake  GeneratedSrc1.cmake  Source.cmake  arm-none-eabi.cmake
ethernet_handler/: ethernet_init.c  ethernet_init.h
icp_handler/: icp_handler.c  icp_handler.h
mongoose/: mongoose.h
ra/board/ra6m5_ck_v2/: board.h  board_ethernet_phy.h  board_init.c  board_init.h  board_leds.c  board_leds.h
ra/fsp/inc/instances/: rm_comms_uart.h
ra/fsp/src/r_ether/: r_ether.c
ra/fsp/src/rm_comms_lock/: rm_comms_lock.h
ra/fsp/src/rm_comms_uart/: rm_comms_uart.c
ra_cfg/aws/: FreeRTOSConfig.h  FreeRTOSIPConfig.h
ra_cfg/fsp_cfg/: r_ether_phy_cfg.h
ra_cfg/fsp_cfg/bsp/: board_cfg.h  bsp_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
ra_gen/: blinky_thread.c  blinky_thread.h  common_data.c  common_data.h  ether_thread.c  ether_thread.h  main.c  pin_data.c  sensor_thread.c  sensor_thread.h  vector_data.c  vector_data.h
scrap/: icp_handler.c  ob1203_handler.c  ob1203_handler.h  ob1203_hr.h
script/: fsp.ld
sensor_handler/: hs3001_handler.c  hs3001_handler.h  icp_handler.h  ob1203_handler.c  ob1203_hr.c  sensor_data_queue.c  sensor_data_queue.h  zmod_handler.c  zmod_handler.h
sensor_handler_reg/: hs3001_handler_reg.c  hs3001_handler_reg.h  icp_handler_reg.c  icp_handler_reg.h
src/: blinky_thread_entry.c  ether_thread_entry.c  hal_warmstart.c  new_thread0_entry.c.bak  scrap.txt  sensor_thread_entry.c
tcp_handler/: rtc_ds1307.c  rtc_ds1307.h
tcp_task/: tcp_task.c  tcp_task.h
udp_task/: udp_config.h  udp_task.c  udp_task.h
